--- a/module1-rnn-and-lstm/LS_DS_431_RNN_and_LSTM_Assignment.ipynb
+++ b/module1-rnn-and-lstm/LS_DS_431_RNN_and_LSTM_Assignment.ipynb
@@ -1,95 +1,209 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img align=\"left\" src=\"https://lever-client-logos.s3.amazonaws.com/864372b1-534c-480e-acd5-9711f850815c-1524247202159.png\" width=200>\n",
-    "<br></br>\n",
-    "<br></br>\n",
-    "\n",
-    "## *Data Science Unit 4 Sprint 3 Assignment 1*\n",
-    "\n",
-    "# Recurrent Neural Networks and Long Short Term Memory (LSTM)\n",
-    "\n",
-    "![Monkey at a typewriter](https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Chimpanzee_seated_at_typewriter.jpg/603px-Chimpanzee_seated_at_typewriter.jpg)\n",
-    "\n",
-    "It is said that [infinite monkeys typing for an infinite amount of time](https://en.wikipedia.org/wiki/Infinite_monkey_theorem) will eventually type, among other things, the complete works of Wiliam Shakespeare. Let's see if we can get there a bit faster, with the power of Recurrent Neural Networks and LSTM.\n",
-    "\n",
-    "This text file contains the complete works of Shakespeare: https://www.gutenberg.org/files/100/100-0.txt\n",
-    "\n",
-    "Use it as training data for an RNN - you can keep it simple and train character level, and that is suggested as an initial approach.\n",
-    "\n",
-    "Then, use that trained RNN to generate Shakespearean-ish text. Your goal - a function that can take, as an argument, the size of text (e.g. number of characters or lines) to generate, and returns generated text of that size.\n",
-    "\n",
-    "Note - Shakespeare wrote an awful lot. It's OK, especially initially, to sample/use smaller data and parameters, so you can have a tighter feedback loop when you're trying to get things running. Then, once you've got a proof of concept - start pushing it more!"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "U4-S3-DNN (Python 3.7)",
+      "language": "python",
+      "name": "u4-s3-dnn"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.3"
+    },
+    "colab": {
+      "name": "LS_DS_431_RNN_and_LSTM_Assignment.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Ltj1je1fp5rO"
-   },
-   "outputs": [],
-   "source": [
-    "# TODO - Words, words, mere words, no matter from the heart."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "zE4a4O7Bp5x1"
-   },
-   "source": [
-    "# Resources and Stretch Goals"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "uT3UV3gap9H6"
-   },
-   "source": [
-    "## Stretch goals:\n",
-    "- Refine the training and generation of text to be able to ask for different genres/styles of Shakespearean text (e.g. plays versus sonnets)\n",
-    "- Train a classification model that takes text and returns which work of Shakespeare it is most likely to be from\n",
-    "- Make it more performant! Many possible routes here - lean on Keras, optimize the code, and/or use more resources (AWS, etc.)\n",
-    "- Revisit the news example from class, and improve it - use categories or tags to refine the model/generation, or train a news classifier\n",
-    "- Run on bigger, better data\n",
-    "\n",
-    "## Resources:\n",
-    "- [The Unreasonable Effectiveness of Recurrent Neural Networks](https://karpathy.github.io/2015/05/21/rnn-effectiveness/) - a seminal writeup demonstrating a simple but effective character-level NLP RNN\n",
-    "- [Simple NumPy implementation of RNN](https://github.com/JY-Yoon/RNN-Implementation-using-NumPy/blob/master/RNN%20Implementation%20using%20NumPy.ipynb) - Python 3 version of the code from \"Unreasonable Effectiveness\"\n",
-    "- [TensorFlow RNN Tutorial](https://github.com/tensorflow/models/tree/master/tutorials/rnn) - code for training a RNN on the Penn Tree Bank language dataset\n",
-    "- [4 part tutorial on RNN](http://www.wildml.com/2015/09/recurrent-neural-networks-tutorial-part-1-introduction-to-rnns/) - relates RNN to the vanishing gradient problem, and provides example implementation\n",
-    "- [RNN training tips and tricks](https://github.com/karpathy/char-rnn#tips-and-tricks) - some rules of thumb for parameterizing and training your RNN"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "U4-S3-DNN (Python 3.7)",
-   "language": "python",
-   "name": "u4-s3-dnn"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "37BdKNy-suTZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img align=\"left\" src=\"https://lever-client-logos.s3.amazonaws.com/864372b1-534c-480e-acd5-9711f850815c-1524247202159.png\" width=200>\n",
+        "<br></br>\n",
+        "<br></br>\n",
+        "\n",
+        "## *Data Science Unit 4 Sprint 3 Assignment 1*\n",
+        "\n",
+        "# Recurrent Neural Networks and Long Short Term Memory (LSTM)\n",
+        "\n",
+        "![Monkey at a typewriter](https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Chimpanzee_seated_at_typewriter.jpg/603px-Chimpanzee_seated_at_typewriter.jpg)\n",
+        "\n",
+        "It is said that [infinite monkeys typing for an infinite amount of time](https://en.wikipedia.org/wiki/Infinite_monkey_theorem) will eventually type, among other things, the complete works of Wiliam Shakespeare. Let's see if we can get there a bit faster, with the power of Recurrent Neural Networks and LSTM.\n",
+        "\n",
+        "This text file contains the complete works of Shakespeare: https://www.gutenberg.org/files/100/100-0.txt\n",
+        "\n",
+        "Use it as training data for an RNN - you can keep it simple and train character level, and that is suggested as an initial approach.\n",
+        "\n",
+        "Then, use that trained RNN to generate Shakespearean-ish text. Your goal - a function that can take, as an argument, the size of text (e.g. number of characters or lines) to generate, and returns generated text of that size.\n",
+        "\n",
+        "Note - Shakespeare wrote an awful lot. It's OK, especially initially, to sample/use smaller data and parameters, so you can have a tighter feedback loop when you're trying to get things running. Then, once you've got a proof of concept - start pushing it more!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3_UMFHKpuMld",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "7b8851b3-fa30-4a95-b89d-d1611da39285"
+      },
+      "source": [
+        "!pip install --quiet --upgrade tensorflow_federated"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 430kB 2.7MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.2MB 12.5MB/s \n",
+            "\u001b[K     |████████████████████████████████| 296kB 28.7MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.8MB 50.0MB/s \n",
+            "\u001b[K     |████████████████████████████████| 102kB 11.1MB/s \n",
+            "\u001b[K     |████████████████████████████████| 421.8MB 38kB/s \n",
+            "\u001b[K     |████████████████████████████████| 20.0MB 1.3MB/s \n",
+            "\u001b[K     |████████████████████████████████| 450kB 39.9MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.9MB 39.8MB/s \n",
+            "\u001b[?25h  Building wheel for gast (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[31mERROR: datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.8.3 which is incompatible.\u001b[0m\n",
+            "\u001b[31mERROR: albumentations 0.1.12 has requirement imgaug<0.2.7,>=0.2.5, but you'll have imgaug 0.2.9 which is incompatible.\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "Ltj1je1fp5rO",
+        "colab": {}
+      },
+      "source": [
+        "# TODO - Words, words, mere words, no matter from the heart.\n",
+        "from __future__ import print_function\n",
+        "\n",
+        "from tensorflow.keras.preprocessing import sequence\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Embedding\n",
+        "from tensorflow.keras.layers import LSTM\n",
+        "import tensorflow_federated as tff\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fr6b1sYqt639",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "ad17b5fe-a052-49e5-c6ac-eda51882029e"
+      },
+      "source": [
+        "train_data, test_data = tff.simulation.datasets.shakespeare.load_data()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tff-datasets-public/shakespeare.tar.bz2\n",
+            "1851392/1848122 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/tensorflow_federated/python/simulation/hdf5_client_data.py:63: H5pyDeprecationWarning: dataset.value has been deprecated. Use dataset[()] instead.\n",
+            "  collections.OrderedDict((name, ds.value) for name, ds in sorted(\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MAV_adakup-U",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "outputId": "aa3cae41-2049-4747-b0cf-c2af785fb5ec"
+      },
+      "source": [
+        "train_data.head()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-c4dda1b59424>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'HDF5ClientData' object has no attribute 'head'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "zE4a4O7Bp5x1"
+      },
+      "source": [
+        "# Resources and Stretch Goals"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "uT3UV3gap9H6"
+      },
+      "source": [
+        "## Stretch goals:\n",
+        "- Refine the training and generation of text to be able to ask for different genres/styles of Shakespearean text (e.g. plays versus sonnets)\n",
+        "- Train a classification model that takes text and returns which work of Shakespeare it is most likely to be from\n",
+        "- Make it more performant! Many possible routes here - lean on Keras, optimize the code, and/or use more resources (AWS, etc.)\n",
+        "- Revisit the news example from class, and improve it - use categories or tags to refine the model/generation, or train a news classifier\n",
+        "- Run on bigger, better data\n",
+        "\n",
+        "## Resources:\n",
+        "- [The Unreasonable Effectiveness of Recurrent Neural Networks](https://karpathy.github.io/2015/05/21/rnn-effectiveness/) - a seminal writeup demonstrating a simple but effective character-level NLP RNN\n",
+        "- [Simple NumPy implementation of RNN](https://github.com/JY-Yoon/RNN-Implementation-using-NumPy/blob/master/RNN%20Implementation%20using%20NumPy.ipynb) - Python 3 version of the code from \"Unreasonable Effectiveness\"\n",
+        "- [TensorFlow RNN Tutorial](https://github.com/tensorflow/models/tree/master/tutorials/rnn) - code for training a RNN on the Penn Tree Bank language dataset\n",
+        "- [4 part tutorial on RNN](http://www.wildml.com/2015/09/recurrent-neural-networks-tutorial-part-1-introduction-to-rnns/) - relates RNN to the vanishing gradient problem, and provides example implementation\n",
+        "- [RNN training tips and tricks](https://github.com/karpathy/char-rnn#tips-and-tricks) - some rules of thumb for parameterizing and training your RNN"
+      ]
+    }
+  ]
 }
